[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Yleaf"
dynamic = ["version"]
description = "Tool for human Y-chromosomal phylogenetic analysis and haplogroup inference."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Bram van Wersch", email = "b.vanwersch@erasmusmc.nl" },
    { name = "Diego Montiel Gonzalez" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "setuptools",
    "graphviz",
    "networkx",
    "numpy",
    "pandas",
    "python-dateutil",
    "pytz",
]

[project.scripts]
Yleaf = "yleaf.Yleaf:main"
predict_haplogroup = "yleaf.predict_haplogroup:main"

[project.urls]
Homepage = "https://github.com/genid/Yleaf.git"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools]
packages = ["yleaf"]

[tool.setuptools.dynamic]
version = {attr = "yleaf.__version__"}

[tool.setuptools.package-data]
yleaf = ["data/**/*", "config.txt", "chr_naming_convention.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
target-version = "py310"
lint.select = ["E", "F", "UP", "B", "SIM", "I"]
